<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memory Game</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="group_title">INTENSIO</string>
    <string name="username_prompt">Enter Your Username</string>
    <string name="loginS">Login</string>
    <string name="createnewuserS">Create New User</string>
    <string name="logoutS">Logout</string>
    <string name="username">$username</string>
    <string name="text_error">addNewText</string>
    <string name="numberofobjectsS">Number Of Objects:</string>
    <string name="highscoresS">Highscores:</string>
    <string name="sample_text">Sample Text</string>
    <string name="createuser_prompt">Create New User</string>
    <string name="optionsS">Game Options</string>
    <string name="game_title">Memory Game</string>
    <string name="usernameS">Username:</string>
    <string name="colorS">Color:</string>
    <string name="shapesS">Shapes:</string>
    <string name="layoutS">Layout:</string>
    <string name="objectsizeS">Object Size:</string>
    <string name="redS">Red</string>
    <string name="blueS">Blue</string>
    <string name="greenS">Green</string>
    <string name="purpleS">Purple</string>
    <string name="orangeS">Orange</string>
    <string name="yellowS">Yellow</string>
    <string name="squareS">Square</string>
    <string name="triangleS">Triangle</string>
    <string name="circleS">Circle</string>
    <string name="gridS">Grid</string>
    <string name="diamondS">Diamond</string>
    <string name="playS">Play</string>
    <string name="createS">Create</string>
    <string name="cancelS">Cancel</string>
    <string-array name="number_array">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
	<string-array name="size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
        <string name="$error_message">error_message</string>
        <string name="oneS">"1. "</string>
        <string name="twoS">"2. "</string>
        <string name="threeS">"3. "</string>
        <string name="fourS">"4. "</string>
        <string name="fiveS">"5. "</string>
        <string name="rankS">Rank: </string>
        <string name="objectsS">Objects:</string>
        <string name="timeS">Time:</string>
        <string name="sequencesS">Sequences:</string>
    
</resources>