<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gameoptionscontainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:baselineAligned="false"
    android:gravity="center_horizontal|center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/gameoptionstopcontainer"
        android:layout_width="924dp"
        android:layout_height="75dp"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/gametitletext"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.28"
            android:text="@string/optionsS"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/highscoretext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernameS"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/optionsusernametext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".60"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionsseparationcontainer"
        android:layout_width="match_parent"
        android:layout_height="269dp"
        android:baselineAligned="true"
        android:gravity="center_vertical|center" >

        <LinearLayout
            android:id="@+id/colorcontainer"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/colortext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colorS"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkboxredcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redS"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/checkboxbluecolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blueS"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/checkboxgreencolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greenS"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/checkboxpurplecolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purpleS"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/checkboxorangecolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orangeS"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/checkboxyellowcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellowS"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/shapescontainer"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/shapestext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shapesS"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkboxsquareshape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/squareS"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/checkboxtriangleshape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/triangleS"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/checkboxcircleshape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/circleS"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutcontainer"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/layouttext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layoutS"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/radiolayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radiobuttongridlayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/gridS"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/radiobuttondiamondlayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diamondS"
                    android:textSize="25sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/objectsizecontainer"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/objectsizetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/objectsizeS"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/objectsizespinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/numberofobjectscontainer"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/numberofobjectstext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numberofobjectsS"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/numberofobjectsdropdown"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infologoutplaycontainer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="bottom" >

        <Button
            android:id="@+id/logoutbutton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_weight="0.60"
            android:text="@string/logoutS" />

        <Button
            android:id="@+id/playbutton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_weight="0.60"
            android:text="@string/playS" />

    </LinearLayout>

</LinearLayout>